# ASP.Net/Commerce_en_ligne/CommerceAPI_NetCore/CommerceAPI_NetCore/Models/ProductPictureMapping.cs
@@ -1,18 +1,31 @@
-﻿using System;
-using System.Collections.Generic;
+﻿#nullable disable
 
-#nullable disable
+namespace CommerceAPI_NetCore.Models {
 
-namespace CommerceAPI_NetCore.Models
-{
-    public partial class ProductPictureMapping
-    {
-        public int Id { get; set; }
-        public int ProductId { get; set; }
-        public int PictureId { get; set; }
-        public int DisplayOrder { get; set; }
+    public partial class ProductPictureMapping {
 
-        public virtual Picture Picture { get; set; }
-        public virtual Product Product { get; set; }
+        public int Id {
+            get; set;
+        }
+
+        public int ProductId {
+            get; set;
+        }
+
+        public int PictureId {
+            get; set;
+        }
+
+        public int DisplayOrder {
+            get; set;
+        }
+
+        public virtual Picture Picture {
+            get; set;
+        }
+
+        public virtual Product Product {
+            get; set;
+        }
     }
 }
